fix: update render-table workflow to tag with pr/tooling

--- a/.github/workflows/render-table.yml
+++ b/.github/workflows/render-table.yml
@@ -25,5 +25,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: Update RFC table in README
+          label: pr/tooling
           title: Update RFC table in README
           branch: auto/update-rfc-table
